Update boatDetailTabs  Challenge 14

--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -15,6 +15,8 @@
           </lightning-layout>
         </div>
       </template>
+      <div style="background-image:url('/resource/Sailboats/sailboat6.jpg')">
+      </div>
     </lightning-tab>
     <lightning-tab label="Boat Editor">
       <template if:true={boats.data}>
